<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.seregamorph</groupId>
        <artifactId>spring-test-smart-context-parent</artifactId>
        <version>0.4-SNAPSHOT</version>
    </parent>

    <artifactId>demo-parent</artifactId>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.install.skip>true</maven.install.skip>
        <maven.deploy.skip>true</maven.deploy.skip>
        <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
    </properties>

    <modules>
        <module>demo-maven-junit-platform-junit4-boot24</module>
        <module>demo-maven-junit-platform-jupiter-boot32</module>
        <module>demo-maven-junit-platform-testng-boot32</module>
        <module>demo-maven-testng-boot24</module>
    </modules>

    <profiles>
        <profile>
            <id>include-gradle-build</id>
            <modules>
                <module>demo-gradle-junit-platform-jupiter-boot32</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.seregamorph</groupId>
                <artifactId>spring-test-smart-context</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
